k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandigo-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mandigo-frontend
  template:
    metadata:
      labels:
        app: mandigo-frontend
    spec:
      containers:
      - name: frontend
        # PASTE YOUR FULL ECR URI BELOW, REPLACING THE PLACEHOLDER:
        image: 526955697030.dkr.ecr.ap-south-1.amazonaws.com/mandigo-frontend:25c7afd531454cad5123b4879ce4d9c5b8271a98
        ports:
        - containerPort: 80
