k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandigo-frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: mandigo-frontend
  ports:
    - port: 80
      targetPort: 80
