k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandigo-frontend-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/certificatesresolvers: "le"
spec:
  tls:
  - hosts:
      - projectbyradhe.xyz
  rules:
  - host: projectbyradhe.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mandigo-frontend-service
            port:
              number: 80
